code/practise/ingress/rest-api/single-rest-api/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Tells Kubernetes to use the NGINX Ingress Controller
spec:
  rules:
  - host: "springboot.local"  # A fake domain for testing with Minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-api-service
            port:
              number: 80
